--- a/JosetteArts/css/style.css
+++ b/JosetteArts/css/style.css
@@ -158,47 +158,31 @@ html,body{
 	width: 350px;
 	height: 350px;
 }
-.section-22{
-	padding: 90px  2%;
-	margin-right: 30px;
-	margin-left: -10px;
-}
-.section-2{
-  margin: 20px;
-  width: 100%;
-  height: 100%;
-  padding: 10px ;
-  max-height: 60%;
-}
 
-.section-22 h2{
+.section-2{
 	text-align: center;
 	color: #462663;
 	font-weight: normal;
-	padding-bottom: 50px;
 }
-
-.box{
-	position:relative;
-	width: 23%;
-	max-width: 100%;
-	max-height: 700px;
-	height: 200px;
-	padding: 45px 3%;
-	background-color: #e6adce;
-	float: left;
-	margin: 30px 10px;
-	border-radius: 20px;
-}
-
-.bow1{
-	display: block;
-}
-
-.box p{
-	font-style: italic;
+.container-section-2{
+	margin-top: 40px;
 	text-align: center;
-	color: black;
+
+}
+.container-single-2{
+	float: left;
+	padding: 30px;
+	width: 25%;
+}
+
+.container-single-2 p{
+	margin-top: 38px;
+}
+.efeito{
+	height:200px;
+  background-color:#e6adce;
+  border-radius:10px 50px;
+  padding:20px;
 }
 
 .footer{
@@ -219,7 +203,7 @@ html,body{
 	font-style: italic;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1205px){
 
 	/*Redes sociais*/
 
@@ -273,23 +257,19 @@ html,body{
 
 
 
-.box{
-	width: 230px ;
-	height: 200px;
-	display: inline;
-	padding: 30px 3%;
+.container-single-2{
+	float: left;
+	padding: 30px;
+	width: 50%;
 }
 
-
-.box p{
-	font-style: italic;
-	text-align: center;
-	color: black;
+.container-single-2 p{
+	margin-top: 35px;
 }
 
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 821px){
 
 
 
@@ -338,24 +318,19 @@ html,body{
 
 
 
-.box{
-	width: 250px ;
-	height: 180px;
-	display: inline;
-	margin-left: 64px;
-	padding: 25px 3%;
+.container-single-2{
+	float: left;
+	padding: 30px;
+	width: 50%;
 }
 
-
-.box p{
-	font-style: italic;
-	text-align: center;
-	color: black;
+.container-single-2 p{
+	margin-top: 30px;
 }
 
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 550px){
 	
 .container-list:hover{
 	width: 519px;
@@ -409,30 +384,23 @@ html,body{
 
 	/*Opinião Clientes*/
 
-.box{
-	width: 230px ;
-	height: 160px;
-	max-width: 60%;
-	display: inline;
-	margin-left: 70px;
-	padding: 20px 3%;
+.container-single-2{
+	float: left;
+	padding: 30px;
+	width: 100%;
+}
+
+.container-single-2 p{
+	margin-top: 50px;
 }
 
 
-.box p{
-	font-style: italic;
-	text-align: center;
-	color: black;
 }
 
-}
-
-@media screen and (max-width:375px){
-	.section-22{
-	padding: 0  2%;
-	margin-right: 0px;
-	margin-left: -34px;
-}
+@media screen and (max-width:425px){
+	.container-single-2 p{
+	margin-top: 40px;
+	}
 }
 
 @media screen and (max-width: 320px){
@@ -491,22 +459,8 @@ html,body{
 	/*Opinião Clientes*/
 
 
-
-
-.box{
-	width: 230px ;
-	height: 200px;
-	max-width: 60%;
-	display: inline;
-	margin-left: 43px;
-	padding: 25px 3%;
-}
-
-
-.box p{
-	font-style: italic;
-	text-align: center;
-	color: black;
+.container-single-2 p{
+	margin-top: 30px;
 }
 
 }
