--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,13 +222,10 @@ body{
 }
 
 .rodape{ 
-	padding: 50px ;
-	width: 100%;
-	height: 100%;
-}
-
-.rodape .roda {
+	display: flex;
+	justify-content: center;
 	align-items: center;
+	padding: 25px 13px;
 }
 
 .rodape p{
